# pixeldrift

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.cfg  setup.py
examples/: find_lut_filter.py  progenitor_cells.py  simple_lut_filter.py  turing_drawings.py
src/pixeldrift/: __init__.py  bindings.cpp  cells.py  components.hpp  diffusionline.py  hello.py  render.py  rules.hpp  systems.hpp  tile.hpp  turing_head.hpp  world.hpp  world.py
tests/: cells_test.py  rules_test.py  tick6_test.py
